--- a/templates/detail_page.html
+++ b/templates/detail_page.html
@@ -1,23 +1,17 @@
 {% extends "general.html" %}
+
 {% block content %}
-        <div class="container">
-        {% for item in plot_data.keys() %}
-            {% if item=="normal" %}
-                {% if batch %}
-                    <h2>Plots for {{title}} in batch mode</h2>
-                {% else %}
-                    <h2>Plots for {{title}}</h2>
-                {% endif %}
-            {% elif item=="scatter" and args.scatter %}
-                {% if batch %}
-                    <h2>Scatterplots for {{title}} in batch mode</h2>
-                {% else %}
-                    <h2>Scatterplots for {{title}}</h2>
-                {% endif %}
-            {% endif %}
-            {% for plot in plot_data[item] %}
+    <div class="container">
+        <h1>{{ title }} </h1>
+        <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Quick Links
+            </button>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton"></div>
+        </div>
+        {% for plot in plot_data["normal"] %}
             {{ plot }}
-            {% endfor %}
-            <hr />
+            {{plot_data["scatter"][loop.index - 1]}}
         {% endfor %}
+
 {% endblock %}
