--- a/templates/general.html
+++ b/templates/general.html
@@ -1,58 +1,71 @@
 <!DOCTYPE html>
-    <html lang="en">
-      <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-        <title>{{ title }}</title>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-        <!-- Include all compiled plugins (below), or include individual files as needed -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-        <!-- Bootstrap -->
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-        <style>
-            body { padding-top: 50px; }
-        </style>
-        <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-        <!--[if lt IE 9]>
-          <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-          <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-        <![endif]-->
-      </head>
-         <body>
-
-            <nav class="navbar navbar-inverse navbar-fixed-top">
-              <div class="container">
-                <div class="navbar-header">
-                  <a class="navbar-brand" href="index.html">ANN Benchmarks</a>
-                </div>
-                <div id="navbar" class="collapse navbar-collapse">
-                  <ul class="nav navbar-nav">
-                    <li class="active"><a href="index.html">Home</a></li>
-                  </ul>
-                  <ul class="nav navbar-nav">
-                    <li class="active"><a href="index.html#datasets">Datasets</a></li>
-                  </ul>
-                  <ul class="nav navbar-nav">
-                    <li class="active"><a href="index.html#algorithms">Algorithms</a></li>
-                  </ul>
-                  <ul class="nav navbar-nav">
-                    <li class="active"><a href="index.html#contact">Contact</a></li>
-                  </ul>
-                </div><!--/.nav-collapse -->
-              </div>
-            </nav>
-
-            {% block content %} {% endblock %}
-
-            <div id="contact">
-            <h2>Contact</h2>
-            <p>ANN-Benchmarks has been developed by Martin Aumueller (maau@itu.dk), Erik Bernhardsson (mail@erikbern.com), and Alec Faitfull (alef@itu.dk). Please use
-            <a href="https://github.com/erikbern/ann-benchmarks/">Github</a> to submit your implementation or improvements.</p>
-            </div>
-        </div>
-    </body>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <title>{{ title }}</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.js"></script>
+    <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
+    <script src="https://cdn.staticfile.org/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdn.staticfile.org/popper.js/1.15.0/umd/popper.min.js"></script>
+    <script src="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <style>
+      body {
+        padding-top: 25px;
+      }
+    </style>
+  
+  </head>
+  <body>
+    {% block content %} {% endblock %}
+  </div>
+  </body>
+  <style>
+    .container {
+      width: 100%;
+      position: relative;
+      padding-top: 40px;
+    }
+    .chart {
+        margin: 16px;
+        width: 100%;
+    }
+    .dropdown {
+      position: absolute;
+      right: 10px;
+      top: 10px;
+    }
+    .card {
+      width: 28rem;
+      margin-bottom: 2rem;
+    }
+    .algorithm.card {
+      width: 18rem;
+      margin-right: 2rem;
+    }
+    .algorithmResult {
+      display: flex;
+    }
+  </style>
+  <script type="text/javascript">
+    window.addEventListener('load', () => {
+      let canvas = [...document.querySelectorAll('.chart')];
+      let originIds =  canvas.map(c => c.id.replace('s', ''));
+      canvas.forEach(c => {
+        c.id = c.id.replace(/\s/g, '')
+      });
+      let ids = canvas.map(c => c.id);
+      let menu = document.querySelector('.dropdown-menu');
+      ids.forEach((id, index) => {
+        const item = document.createElement('a');
+        item.className="dropdown-item";
+        item.href = `#${id}`;
+        item.innerHTML = originIds[index];
+        menu.appendChild(item);
+      })
+    });
+  </script>
 </html>
+
