--- a/templates/summary.html
+++ b/templates/summary.html
@@ -1,6 +1,7 @@
 {% extends "general.html" %}
 {% block content %}
         <div class="container">
+            
             <h1>Info</h1>
             <p>ANN-Benchmarks is a benchmarking environment for approximate nearest neighbor algorithms search. This website contains the current benchmarking results. Please visit <a href="http://github.com/erikbern/ann-benchmarks/">http://github.com/erikbern/ann-benchmarks/</a> to get an overview over evaluated data sets and algorithms. Make a pull request on <a href="http://github.com/erikbern/ann-benchmarks/">Github</a> to add your own code or improvements to the
             benchmarking system.
@@ -18,43 +19,48 @@
                     {% else %}
                         <h2>Benchmarks for Single Queries</h2>
                     {% endif %}
-
-                    <h2 id ="datasets">Results by Dataset</h2>
-                    {% for distance_data in dataset_with_distances[type] %}
-                        <h3>Distance: {{ distance_data.name }} </h3>
-                        {% for entry in distance_data.entries %}
-                            <a href="./{{label_func(entry.name, type == 'batch')}}.html">
-                            <div class="row" id="{{entry.name}}">
-                                <div class = "col-md-4 bg-success">
-                                    <h4>{{entry.desc}}</h4>
+                    <div class="resultsContainer">
+                    <div class="datasetsContainer">
+                        <h2 id ="datasets">Results by Dataset</h2>
+                        {% for distance_data in dataset_with_distances[type] %}
+                            <h3>Distance: {{ distance_data.name }} </h3>
+                            {% for entry in distance_data.entries %}
+                            <div class="card">
+                                <div class="card-body">
+                                    <h5 class="card-title">{{entry.name}}</h5>
+                                    <a href="./{{label_func(entry.name, type == 'batch')}}.html">
+                                        <img class="card-img-top" src="{{label_func(entry.name, type == 'batch')}}.png" />
+                                    </a>
+                                <p class="card-text">{{entry.desc}}</p>
+                                <a href="./{{label_func(entry.name, type == 'batch')}}.html" class="btn btn-primary">Detail</a>
+                                </div>
                             </div>
-                            <div class = "col-md-8">
-                                <img class = "img-responsive" src="{{label_func(entry.name, type == 'batch')}}.png" />
-                            </div>
-                        </div>
-                        </a>
-                        <hr />
+                            {% endfor %}
                         {% endfor %}
-                    {% endfor %}
-                    <h2 id="algorithms">Results by Algorithm</h2>
-                    <ul class="list-inline"><b>Algorithms:</b>
-                        {% for algo in algorithms[type].keys() %}
-                            <li><a href="#{{algo}}">{{algo}}</a></li>
-                        {% endfor %}
-                    </ul>
-                    {% for algo in algorithms[type].keys()%}
-                    <a href="./{{label_func(algo, type == 'batch')}}.html">
-                        <div class="row" id="{{algo}}">
-                            <div class = "col-md-4 bg-success">
-                                <h4>{{algo}}</h4>
-                        </div>
-                        <div class = "col-md-8">
-                            <img class = "img-responsive" src="{{label_func(algo, type == 'batch')}}.png" />
-                        </div>
                     </div>
-                    </a>
-                    <hr />
-                    {% endfor %}
+                    <div class="algorithmsContainer">
+                        <h2 id="algorithms">Results by Algorithm</h2>
+                        <!-- <ul class="list-inline"><b>Algorithms:</b>
+                            {% for algo in algorithms[type].keys() %}
+                                <li><a href="#{{algo}}">{{algo}}</a></li>
+                            {% endfor %}
+                        </ul> -->
+                        <div class="algorithmResult">
+                        {% for algo in algorithms[type].keys()%}
+                        <div class="algorithm card" >
+                            <div class="card-body">
+                            <h5 class="card-title">{{algo}}</h5>
+                            <a href="./{{label_func(algo, type == 'batch')}}.html">
+                                <img class="card-img-top" src="{{label_func(algo, type == 'batch')}}.png" />
+                            </a>
+                            <a href="./{{label_func(algo, type == 'batch')}}.html" class="btn btn-primary">Detail</a>
+                            </div>
+                        </div>
+                        {% endfor %}
+                    </div>
+                    </div>
+                </div>
                 {% endif %}
             {% endfor %}
 {% endblock %}
+
